Added fonts and images

--- a/src/components/master.css
+++ b/src/components/master.css
@@ -6,10 +6,35 @@
   background-color: #0f0f0f !important;
 }
 
+@font-face {
+  font-family: "blauerNue-regular";
+  src: url("../../public/fonts/BlauerNue-Regular.otf") format("opentype");
+}
+@font-face {
+  font-family: "blauerNue-thin";
+  src: url("../../public/fonts/BlauerNue-Thin.otf") format("opentype");
+}
+
+* {
+  font-family: "blauerNue-thin";
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "blauerNue-regular";
+}
+
+.font-thin {
+  font-family: "blauerNue-thin";
+}
+
 .bgHero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/hero.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/hero.png");
   height: 50%;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -50,7 +75,7 @@
       /* White starts */ white 50%,
       /* White continues until 70% */ transparent 50%
     ),
-    /* Then image appears */ url("../../public/bg-bottom.jpg") no-repeat top center;
+    /* Then image appears */ url("../../public/Imagem-1.png") no-repeat top center;
   background-size: cover;
   background-repeat: no-repeat;
 }
