--- a/src/components/master.css
+++ b/src/components/master.css
@@ -32,11 +32,11 @@ h6 {
 }
 
 .bgHero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/hero.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../public/hero.png");
   height: 50%;
   background-position: top;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 150%;
   position: relative;
 }
 
@@ -75,7 +75,7 @@ h6 {
       /* White starts */ white 50%,
       /* White continues until 70% */ transparent 50%
     ),
-    /* Then image appears */ url("../../public/Imagem-1.png") no-repeat top center;
+    /* Then image appears */ url("../../public/Imagem-1.png") no-repeat bottom center;
   background-size: cover;
   background-repeat: no-repeat;
 }
