Added maxWidths and font sizes according to the xd

--- a/src/components/forchauffeurs/forchauffeurs.css
+++ b/src/components/forchauffeurs/forchauffeurs.css
@@ -48,3 +48,10 @@
 .translate-lg-20 {
   transform: translateY(-50%);
 }
+
+@media screen and (max-width: 992px) {
+  .translate-lg-20 {
+    transform: translateY(0%);
+    padding-top: 5em !important;
+  }
+}
