--- a/src/components/master.css
+++ b/src/components/master.css
@@ -1,31 +1,46 @@
 :root {
-  --dark-color: #0f0f0f !important;
+  --dark-color: #0d0d0d !important;
   --light-color: #f2f2f2 !important;
 }
 
 .bg-dark {
-  background-color: #0f0f0f !important;
+  background-color: #0d0d0d !important;
 }
 .bg-light {
   background-color: #f2f2f2 !important;
+}
+
+.btn-dark {
+  background-color: #0d0d0d !important;
+}
+
+.btn-outline-dark:hover {
+  background-color: #0d0d0d !important;
 }
 
 .text-lighter {
   color: #d4d4d4;
 }
 
+.ch-80 {
+  min-height: 80dvh;
+}
+
 @font-face {
   font-family: "blauerNue-regular";
   src: url("../../public/fonts/BlauerNue-Regular.otf") format("opentype");
 }
+
 @font-face {
   font-family: "blauerNue-thin";
   src: url("../../public/fonts/BlauerNue-Thin.otf") format("opentype");
 }
+
 @font-face {
   font-family: "blauerNue-bold";
   src: url("../../public/fonts/BlauerNue-Bold.otf") format("opentype");
 }
+
 @font-face {
   font-family: "blauerNue-light";
   src: url("../../public/fonts/BlauerNue-Light.otf") format("opentype");
@@ -105,7 +120,7 @@ h6 {
 }
 
 .custom-footer {
-  background-color: #0f0f0f;
+  background-color: #0d0d0d;
   border-top: 1px solid #444;
   font-size: 0.875rem;
 }
@@ -131,6 +146,15 @@ h6 {
 
 .navbar-nav .nav-link.active {
   border-bottom: 2px solid white;
+}
+
+.offcanvas-backdrop {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.ChatBox {
+  max-width: 521.83px;
+  height: 634px;
 }
 
 @media (min-width: 1300px) {
@@ -232,6 +256,10 @@ h6 {
   .bgHero {
     background-position: 37% -1%;
     background-repeat: no-repeat;
-    background-size: 221%;
+    background-size: 210%;
   }
+}
+
+p {
+  line-height: 37px;
 }
