--- a/src/components/forchauffeurs/benefits.css
+++ b/src/components/forchauffeurs/benefits.css
@@ -1,6 +1,6 @@
 .benefits-section {
   margin-top: 10em !important;
-  background-color: #0e0e0e;
+  background-color: #0d0d0d;
   color: #000;
 }
 
@@ -44,5 +44,8 @@
 @media screen and (max-width: 992px) {
   .benefits-section .container {
     transform: translateY(0%);
+  }
+  .benefits-section {
+    margin-top: 5em !important;
   }
 }
